Removed "px" at the width and height attributes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<style> body {padding: 0; margin: 0;} </style>
 	</head>
 	<body>
-		<img id="LogoHeader" src="Relative_Programming_Logo_4096.png" height="150px" width="150px" />
+		<img id="LogoHeader" src="Relative_Programming_Logo_4096.png" height="150" width="150" />
 		<h1 class="mainHeader">Relative Programming</h1> 
 		<p></p>
 	</body>
