--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<script src="sketch.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Relative Programming</title>
-		<style> body {padding: 0; margin: 0;} </style>
 	</head>
 	<body>
-		<img id="LogoHeader" src="Relative_Programming_Logo_4096.png" height="150" width="150" />
+		<img id="logoHeader" src="Relative_Programming_Logo_4096.png" height="150" width="150" />
 		<h1 class="mainHeader">Relative Programming</h1> 
-		<p></p>
+		<p id="spacing"></p>
+		<a class="projectlink" href="testing_project/index.html">Testing-Project</a>
 	</body>
 </html>
