Changed logo image size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Relative Programming</title>
 	</head>
 	<body>
-		<img id="logoHeader" src="Relative_Programming_Logo_4096.png" height="150" width="150" />
+		<img id="logoHeader" src="Relative_Programming_Logo_2048.jpg" height="150" width="150" />
 		<h1 class="mainHeader">Relative Programming</h1> 
 		<p id="spacing"></p>
 		<a class="projectlink" href="testing_project/index.html">Testing-Project</a>
