--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="bubble.js"></script>
 		<script src="sketch.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Relative Programming</title>
 	</head>
 	<body>
